--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -12,7 +12,7 @@
 
 <body id="t" class="offline">
     <div id="messageBox" class="sendmessage">
-         <h1 style="text-align: center;font-family: 'Open Sans', sans-serif;">Press Space to start</h1>
+         <h4 style="text-align: center;font-family: 'Open Sans', sans-serif;">Touch screen for start Game</h4>
          <div class="niokbutton" onclick="okbuttonsend()"></div>
     </div>
     <div id="main-frame-error" class="interstitial-wrapper">
